--- a/01-clases/app/src/main/res/values-en-land/strings.xml
+++ b/01-clases/app/src/main/res/values-en-land/strings.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="saludo">This is the condition 1</string>
+    <color name="textColor">#FF9C27B0</color>
 </resources>
