--- a/01-clases/app/src/main/res/values-en-port/strings.xml
+++ b/01-clases/app/src/main/res/values-en-port/strings.xml
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="saludo">This is the condition 2</string>
+    <color name="textColor">#FFE91E63</color>
+
 </resources>
