--- a/01-clases/app/src/main/res/values-es-land/strings.xml
+++ b/01-clases/app/src/main/res/values-es-land/strings.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="saludo">Esta es la condición 3</string>
+    <color name="textColor">#FFFF5722</color>
 </resources>
