--- a/01-clases/app/src/main/res/values/strings.xml
+++ b/01-clases/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">2024ASWGR2SGPV</string>
     <string name="saludo">Hello World</string>
+    <color name="textColor">#000000</color>
+    <color name="bgColor"></color>
 </resources>
