--- a/01-clases/app/src/main/res/values/strings.xml
+++ b/01-clases/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="saludo">Hello World</string>
     <color name="textColor">#000000</color>
     <color name="bgColor"></color>
+    <string-array name="string_array_opciones">
+        <item>Lunes</item>
+        <item>Martes</item>
+        <item>Miercoles</item>
+    </string-array>
 </resources>
+
+
